fixed overflow?

--- a/web/characters.css
+++ b/web/characters.css
@@ -41,10 +41,13 @@ h1{
   font-size: 6vw;
 }
 ul {
+  margin-left:10px;
+  margin-right:10px;
   display: flex;
   justify-content: center;
   align-items: left;
   list-style-type: none;
+  overflow: hidden;
 }
 li{
   widows:20%;
